testsuite/tests/overloadedrecflds/should_compile/BootFldReexport.stderr

BootFldReexport.hs:8:9: error: [GHC-87543]
    Ambiguous occurrence ‘fld’.
    It could refer to
       either the field ‘fld’ of record ‘BootFldReexport_O.O’,
              imported from ‘BootFldReexport_O’ at BootFldReexport.hs:6:5-7
              (and originally defined at BootFldReexport_O.hs:5:16-18),
           or ‘BootFldReexport_N.fld’,
              imported from ‘BootFldReexport_N’ at BootFldReexport.hs:4:5-7
              (and originally defined in ‘BootFldReexport_O’
                 at BootFldReexport_O.hs-boot:4:1-13).
